# netexpand

./: .gitignore  README.md  netexpand  netexpand copy  netexpand.py  pyproject.toml
.github/workflows/: python-publish.yml
src/netexpand/: _version.py  cli.py  core.py
