[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "netexpand"
dynamic = ["version"]
description = "Expands networks given in CIDR, dashed, or splat format."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Stephen J. Trotter", email = "stephen@trotter.cloud" }
]
dependencies = []

[project.scripts]
# This exposes the CLI command 'netexpand' to the user's terminal
netexpand = "netexpand.cli:main"

[tool.setuptools_scm]
# This tells setuptools_scm to write the inferred version to a file
# so your CLI can read it via --version without git being present.
write_to = "src/netexpand/_version.py"